<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_list_files_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:orderInCategory="1"
        android:title="@string/menu_list_files_info"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_list_files_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="2"
        android:title="@string/menu_list_files_delete"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_list_files_rename"
        android:icon="@drawable/ic_baseline_text_format_24"
        android:orderInCategory="3"
        android:title="@string/menu_list_files_rename"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_list_files_move"
        android:icon="@drawable/ic_baseline_content_cut_24"
        android:title="@string/menu_list_files_move"
        android:visible="false"
        android:orderInCategory="4"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_list_files_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/menu_list_files_move"
        android:visible="false"
        android:orderInCategory="5"
        app:showAsAction="always" />
</menu>