<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="18dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subscription_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"/>

    <TextView
        android:id="@+id/payment_issue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/payment_issue" />

    <Button
        android:id="@+id/solve_payment_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_payment_method"
        android:autoLink="all"/>


</LinearLayout>