<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    tools:context=".login.WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingBottom="70dp"
        android:text="@string/lockbook_import"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/import_account_biometric_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingBottom="10dp"
        android:text="@string/biometrics_title"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/import_account_biometric_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <RadioButton
            android:id="@+id/import_account_biometric_none"
            style="@style/DefaultDarkRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/biometric_disabled" />

        <RadioButton
            android:id="@+id/import_account_biometric_recommended"
            style="@style/DefaultDarkRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="monospace"
            android:text="@string/biometric_recommended" />

        <RadioButton
            android:id="@+id/import_account_biometric_strict"
            style="@style/DefaultDarkRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/biometric_strict" />
    </RadioGroup>


    <ImageButton
        android:id="@+id/qr_import_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_qr_code_scanner_black_48" />

    <EditText
        android:id="@+id/text_import_account_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/dark"
        android:fontFamily="monospace"
        android:hint="@string/import_description"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/dark" />

    <Button
        android:id="@+id/welcome_import_lockbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/import_account_import_button"
        android:textColor="#000000" />


</LinearLayout>