<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rename_file_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:paddingTop="8dp"
        android:text="@string/dialog_rename_file_title"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/rename_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:hint="@string/dialog_file_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rename_file_cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rename_file_rename"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/rename_file_rename" />

    </LinearLayout>


</LinearLayout>
